# snakes

./: README.md  pyproject.toml
segmentation/: engine.py  eval_segm.py  parse_xml.py  train_segment.py
src/: config.py  image_stats.txt  model.py  train.py  util.py
