[tool.poetry]
name = "snakes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.19.0"
torch = "^1.10.0"
Pillow = "^8.1.1"
tensorboard = "^2.4.1"
torchvision = "^0.11.1"
pycocotools = "^2.0.2"
aicrowd-cli = "^0.1.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
